src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ageing_Calculation_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ageing Calculation Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allotment_Charges_1__c</fullName>
        <label>Single- Dependent Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allotment_Charges_2__c</fullName>
        <label>Single - Independent Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allotment_Charges_3__c</fullName>
        <label>Stack Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allow_Duplicate_Receipts_Printing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Duplicate Receipts Printing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Pop_Up_Reminder_For_Dues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Pop Up Reminder For Dues..</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amenities__c</fullName>
        <label>Amenities</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Auto_Create_Dues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create Dues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Generate_Reg_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Generate Reg No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Code__c</fullName>
        <formula>RDS_Bank__r.Bank_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Receipts__c</fullName>
        <label>Bank Receipts</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brochure_Link__c</fullName>
        <label>Brochure Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Broker_Commision_Slab_1_to_5__c</fullName>
        <label>Broker % Commision Slab [1 to 5]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker_Commision_Slab_6_to_10__c</fullName>
        <label>Broker % Commision Slab [6 to 10]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker_Commision_Slab_Above_10__c</fullName>
        <label>Broker % Commision Slab [Above 10]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brokerage_Payout_Milestone_1__c</fullName>
        <label>Brokerage Payout Milestone 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage_Payout_Milestone_2__c</fullName>
        <label>Brokerage Payout Milestone 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage__c</fullName>
        <label>Brokerage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculate_Broker_Adjustment_as_Sum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate Broker Adjustment as Sum..</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Receipts__c</fullName>
        <label>Cash Receipts</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Dishonour__c</fullName>
        <label>Cheque Dishonour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheque_Payments__c</fullName>
        <label>Cheque Payments</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circle_Rate__c</fullName>
        <label>Circle Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClientLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClientLookup</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_State__c</fullName>
        <formula>Project_Code__c +  RDS_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_status_details__c</fullName>
        <label>Completion status details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compounding_Period_Starts_From__c</fullName>
        <label>Compounding Period Starts From</label>
        <picklist>
            <picklistValues>
                <fullName>Booking Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Unpaid Due</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compounding_Period__c</fullName>
        <label>Compounding Period</label>
        <picklist>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Const_Stage_Grace_Period__c</fullName>
        <label>Const. Stage Grace Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Details__c</fullName>
        <label>Contact Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Create_Call_Notice_After_Dues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Call Notice After Dues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRS_Contact_Person2__c</fullName>
        <label>Contact Person2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_from_Dt_of_Booking_for_NPV__c</fullName>
        <label>Days from Dt of Booking for NPV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Send_Demand__c</fullName>
        <label>Days to Send Demand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Approver__c</fullName>
        <label>Deal Approver</label>
        <picklist>
            <picklistValues>
                <fullName>Ram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sita</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Default_Bank_A_c_No__c</fullName>
        <label>Default Bank A/c. No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Broker_Relaxation__c</fullName>
        <label>Default Broker Relaxation</label>
        <precision>12</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Cash_A_c_No__c</fullName>
        <label>Default Cash A/c. No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Service_Tax_A_c_No__c</fullName>
        <label>Default Service Tax A/c. No.</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>RDS_Company_Code__r.RDS_Company_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount1_Effective_Till__c</fullName>
        <label>Discount1 Effective Till</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount1_Lumpsum__c</fullName>
        <label>Discount1 Lumpsum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount1_Per_Sq_Ft__c</fullName>
        <label>Discount1 Per Sq.Ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount1_Type__c</fullName>
        <label>Discount1 Type</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physically Challenged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount2_Effective_Till__c</fullName>
        <label>Discount2 Effective Till</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount2_Lumpsum__c</fullName>
        <label>Discount2 Lumpsum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount2_Per_Sq_Ft__c</fullName>
        <label>Discount2 Per Sq.Ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount2_Type__c</fullName>
        <label>Discount2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physically Challenged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount3_Effective_Till__c</fullName>
        <label>Discount3 Effective Till</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount3_Lumpsum__c</fullName>
        <label>Discount3 Lumpsum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount3_Per_Sq_Ft__c</fullName>
        <label>Discount3 Per Sq.Ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount3_Type__c</fullName>
        <label>Discount3 Type</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physically Challenged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount8_Description__c</fullName>
        <label>Discount8 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount9_Description__c</fullName>
        <label>Discount9 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval__c</fullName>
        <label>Discount Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Rohit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mohit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sohit</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Discount_Link_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount Link Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Threshold_SH__c</fullName>
        <label>Discount Threshold (SH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Threshold_SM__c</fullName>
        <label>Discount Threshold (SM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Threshold_TL__c</fullName>
        <label>Discount Threshold (TL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <label>Discount Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_to_be_given_On_Timely_Payment__c</fullName>
        <label>Discount to be given On Timely Payment..</label>
        <picklist>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <label>Division Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dues_Delay__c</fullName>
        <label>Dues Delay</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E_Brochure_URL__c</fullName>
        <label>E-Brochure URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Edit_Base_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Base Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Discount_Lumsum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Discount Lumsum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floor_Plans__c</fullName>
        <label>Floor Plans</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Footer_Image__c</fullName>
        <label>Footer Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Footer_Logo__c</fullName>
        <label>Footer Logo</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forefeiting__c</fullName>
        <label>Forefeiting %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gallery_HTML_Contents__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gallery HTML Contents</label>
        <referenceTo>HTML_Contents__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Unit_Of_Measuremnet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Unit of Measurement</label>
        <referenceTo>Global_Unit_Of_Measurement__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSN_Code__c</fullName>
        <label>HSN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Advance_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Advance Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Online_Projects_Data_Export__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Online Projects Data Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Int_Grace_Period__c</fullName>
        <label>Int. Grace Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integrate_with_FA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integrate with FA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Application_as__c</fullName>
        <label>Interest Application as</label>
        <picklist>
            <picklistValues>
                <fullName>Simple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Applies_Over_Grace_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Applies Over Grace Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Broker_Change_Allowed_on_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Broker Change Allowed on Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PDC_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PDC Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Service_Tax_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Service Tax Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JV__c</fullName>
        <label>JV</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ledger_Narration__c</fullName>
        <label>Ledger Narration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Charges__c</fullName>
        <label>Legal Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_In_AV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal In AV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Map_URL__c</fullName>
        <label>Location Map URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Picture__c</fullName>
        <description>Add main image and text for the project</description>
        <label>Main Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Minimum_Base_Rate__c</fullName>
        <label>Minimum Base Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPV__c</fullName>
        <description>NPV Discounting rate</description>
        <label>NPV %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Narration__c</fullName>
        <label>Narration(To be Printed On Receipt)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Rate_Increased_Area__c</fullName>
        <label>New Rate(Increased Area)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Stack_Available__c</fullName>
        <formula>New_Stack_Total__c - New_Stack_Booked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stack 3 (Available)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Stack_Booked__c</fullName>
        <label>Stack 3 (Booked)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Additional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Status__c</field>
            <operation>equals</operation>
            <value>Booked</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Stack-3</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Stack_Total__c</fullName>
        <label>Stack 3 (Total)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Additional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Stack-3</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_GST_on_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No GST on Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Contactable_Text__c</fullName>
        <label>Non Contactable Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_New__c</fullName>
        <label>Notes New</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityExpires_After_Days__c</fullName>
        <label>OpportunityExpires After Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <label>Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Per_Annum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Per Annum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <label>Phone No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Place_of_Supply__c</fullName>
        <label>Place of Supply</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Default_Receipt_Remark__c</fullName>
        <label>Print Default Receipt Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Print_Installment_Description_On_Ledg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Installment Description On Ledg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_CRM_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project CRM Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <externalId>true</externalId>
        <label>Project Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Description_Site__c</fullName>
        <label>Project Description Site</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Details__c</fullName>
        <label>Project Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <label>Project Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Image__c</fullName>
        <label>Project Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Property_Type__c</fullName>
        <label>Project Property Type</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Receipt_Address__c</fullName>
        <label>Project Receipt Address</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Receipt_Header__c</fullName>
        <label>Project Receipt Header</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Site_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Site Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Pre-Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_site_URL__c</fullName>
        <label>Project site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_type__c</fullName>
        <label>Project type</label>
        <picklist>
            <picklistValues>
                <fullName>Own</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quotation_Approver__c</fullName>
        <label>Quotation Approver</label>
        <picklist>
            <picklistValues>
                <fullName>Sunal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Munal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tunal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Quotation_Validity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number days a quote is valid</description>
        <label>Quotation Validity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RDS_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <referenceTo>Bank__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDS_City__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>Bahadurgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faridabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meerut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sirsa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gurgaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Noida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bengalaruru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RDS_Company_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Code</label>
        <referenceTo>Legal_Entity__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDS_Contact_Person1__c</fullName>
        <label>Contact Person1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Interest_Rate__c</fullName>
        <label>Interest Rate %</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RDS_Project_Description__c</fullName>
        <label>Project Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Short_Name__c</fullName>
        <label>Short Name</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RERA_Certificate_No__c</fullName>
        <label>RERA Certificate No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>